added resume link + made nav-links white + added more project cards

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a class="social-icon fab fa-facebook" href="https://www.facebook.com/kevin.rono.18007/"></a>
           <a class="social-icon fab fa-instagram" href="https://www.instagram.com/kevin_yatich/?hl=en"></a>
           <br>
-          <a type="button" class="btn btn-outline-primary btn-lg download-button" href=""><i class="fas fa-paperclip"></i> Resume</a>
+          <a type="button" class="btn btn-outline-primary btn-lg download-button" href="https://drive.google.com/file/d/1ae32xcVuXvSv0Jft_InoM7_e4fwwdPTy/view?usp=sharing"><i class="fas fa-paperclip"></i> Resume</a>
 
         </div>
 
@@ -221,7 +221,7 @@
 
     <div class="row">
 
-      <div class="other-projects-column col-lg-3 col-md-6">
+      <div class="other-projects-column col-lg-4 col-md-6">
 
         <div class="card border-dark">
           <i class="fas fa-folder-open"></i>
@@ -246,7 +246,7 @@
 
       </div>
 
-      <div class="other-projects-column col-lg-3 col-md-6">
+      <div class="other-projects-column col-lg-4 col-md-6">
 
         <div class="card border-dark">
           <i class="fas fa-folder-open"></i>
@@ -266,7 +266,7 @@
 
       </div>
 
-      <div class="other-projects-column col-lg-3 col-md-6">
+      <div class="other-projects-column col-lg-4 col-md-6">
 
         <div class="card border-dark">
           <i class="fas fa-folder-open"></i>
@@ -287,7 +287,7 @@
 
       </div>
 
-      <div class="other-projects-column col-lg-3 col-md-6">
+      <div class="other-projects-column col-lg-4 col-md-6">
 
         <div class="card border-dark">
           <i class="fas fa-folder-open"></i>
@@ -299,6 +299,48 @@
             I implemented the functionality of these four function calls as well as two new ones: defrag, and heap_info().
             I also implemented a more sophisticated process memory management system in the kernel - namely the brk/sbrk system calls
             and optimistic/lazy memory allocation.
+          </p>
+          <br>
+          <p class="other-projects-text">Implemented in C</p>
+          <br>
+          <a class="other-project-icon fab fa-github" href=""></a>
+          <br>
+        </div>
+
+      </div>
+
+      <div class="other-projects-column col-lg-4 col-md-6">
+
+        <div class="card border-dark">
+          <i class="fas fa-folder-open"></i>
+          <br>
+          <h6 class="other-projects-heading">The Shell</h6>
+          <br>
+          <p class="other-projects-text">
+            An implementation of the backend of the "abash" shell - a simple shell and baby brother of the Bourne-again shell bash.
+            I implemented the following: execution of simple commands, definition of local environment variables, redirection of the standard input and output,
+            execution of pipelines, execution of conditional commands, subcommands, reporting status by setting the environment variable $,
+            directory manipulation, and other built-in commands.
+          </p>
+          <br>
+          <p class="other-projects-text">Implemented in C</p>
+          <br>
+          <a class="other-project-icon fab fa-github" href=""></a>
+          <br>
+        </div>
+
+      </div>
+
+      <div class="other-projects-column col-lg-4 col-md-6">
+
+        <div class="card border-dark">
+          <i class="fas fa-folder-open"></i>
+          <br>
+          <h6 class="other-projects-heading">Recover</h6>
+          <br>
+          <p class="other-projects-text">
+            A program that recovers deleted JPEG files from a memory device.
+            This implementation iterates over a copy of a memory card, looking for JPEGs’ signatures and magically bringing lost photos back to life.
           </p>
           <br>
           <p class="other-projects-text">Implemented in C</p>
