added resume link + github links

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <i class="social-icon tech-icon fab fa-bootstrap"></i>
     <i class="social-icon tech-icon fab fa-js-square"></i>
     <br>
-    <a class="social-icon project-icon fab fa-github" href=""></a>
+    <a class="social-icon project-icon fab fa-github" href="https://github.com/kevin-rono/Shoodoo-Status-Page"></a>
 
     <!-- Shamiri: Promoting Wellness and Resilience in High School Students -->
 
@@ -212,7 +212,7 @@
     <i class="social-icon tech-icon fab fa-css3-alt"></i>
     <i class="social-icon tech-icon fab fa-js-square"></i>
     <br>
-    <a class="social-icon project-icon fab fa-github" href=""></a>
+    <a class="social-icon project-icon fab fa-github" href="https://github.com/kevin-rono/Shamiri"></a>
 
     <!-- Other Noteworthy Projects -->
 
@@ -240,7 +240,7 @@
             <i class="social-icon tech-icon fab fa-css3-alt"></i>
             <i class="social-icon tech-icon fab fa-js-square"></i>
           </div>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/CS50-Finance"></a>
           <br>
         </div>
 
@@ -260,7 +260,7 @@
           <br>
           <p class="other-projects-text">Implemented in C</p>
           <br>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/Virtual-Memory"></a>
           <br>
         </div>
 
@@ -281,7 +281,7 @@
           <br>
           <p class="other-projects-text">Implemented in C</p>
           <br>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/Heatmap"></a>
           <br>
         </div>
 
@@ -303,7 +303,7 @@
           <br>
           <p class="other-projects-text">Implemented in C</p>
           <br>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/Memory-Management"></a>
           <br>
         </div>
 
@@ -325,7 +325,7 @@
           <br>
           <p class="other-projects-text">Implemented in C</p>
           <br>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/The-Shell"></a>
           <br>
         </div>
 
@@ -345,7 +345,7 @@
           <br>
           <p class="other-projects-text">Implemented in C</p>
           <br>
-          <a class="other-project-icon fab fa-github" href=""></a>
+          <a class="other-project-icon fab fa-github" href="https://github.com/kevin-rono/Recover"></a>
           <br>
         </div>
 
