added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Kevin Rono's Personal Website">
+  <meta name="keywords" content="HTML, CSS, Bootstrap, JavaScript">
+  <meta name="author" content="Kevin Rono">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Kevin Rono</title>
 
   <!-- Google Fonts -->
