added favicon and fixed margin bug

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <meta name="description" content="Kevin Rono's Personal Website">
   <meta name="keywords" content="HTML, CSS, Bootstrap, JavaScript">
   <meta name="author" content="Kevin Rono">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
   <title>Kevin Rono</title>
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="favicon_io/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Sacramento&family=Shadows+Into+Light+Two&family=Source+Sans+Pro:wght@900&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
@@ -105,12 +111,12 @@
       <img class="profile-pic" src="images/kevin-copy.jpg" alt="kevin profile picture">
 
       <p class="intro-p">
-        <h2 class="hi-there">Hello 😃</h2><br>
-        <hr class="hr-1">
-        Welcome to my website!<br><br>
-        I'm a Kenyan Junior at Yale University studying Computer Science.
-        I'm fascinated by technology, its intersection with other fields, and the power it holds
-        to have lasting impact on people's lives especially in sub-Saharan Africa.
+      <h2 class="hi-there">Hello 😃</h2><br>
+      <hr class="hr-1">
+      Welcome to my website!<br><br>
+      I'm a Kenyan Junior at Yale University studying Computer Science.
+      I'm fascinated by technology, its intersection with other fields, and the power it holds
+      to have a lasting impact on people's lives, especially in sub-Saharan Africa.
       </p>
 
     </div>
