--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
           <a class="social-icon fab fa-facebook" href="https://www.facebook.com/kevin.rono.18007/"></a>
           <a class="social-icon fab fa-instagram" href="https://www.instagram.com/kevin_yatich/?hl=en"></a>
           <br>
-          <a type="button" class="btn btn-outline-primary btn-lg download-button" href="https://drive.google.com/file/d/1uOPCNkuncpspZwH2NBiDcu7j1X_2DW50/view?usp=sharing"><i class="fas fa-paperclip"></i> Resume</a>
+          <a type="button" class="btn btn-outline-primary btn-lg download-button" href="https://drive.google.com/file/d/1RpQ1C1MGGGTy9J56QjgGRQmOLQMVqqve/view?usp=sharing"><i class="fas fa-paperclip"></i> Resume</a>
 
         </div>
 
@@ -221,6 +221,7 @@
     <i class="social-icon tech-icon fab fa-python"></i>
     <i class="social-icon tech-icon fab fa-html5"></i>
     <i class="social-icon tech-icon fab fa-css3-alt"></i>
+    <i class="social-icon tech-icon fab fa-bootstrap"></i>
     <i class="social-icon tech-icon fab fa-js-square"></i>
     <br>
     <a class="social-icon project-icon fab fa-github" href="https://github.com/kevin-rono/Shamiri"></a>
